[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemies/spider/spider.gd" type="Script" id=1]
[ext_resource path="res://Enemies/spider/sprites/SpiderWalk.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 110, 54 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 110, 0, 110, 54 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 54, 110, 54 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 110, 54, 110, 54 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 108, 110, 54 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 110, 108, 110, 54 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 162, 110, 54 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=52]
radius = 16.0
height = 48.0

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 32, 3.90625 )

[sub_resource type="RayShape2D" id=53]

[node name="spider" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 32
collision_mask = 6
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "Run"

[node name="body" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
rotation = 1.5708
shape = SubResource( 52 )

[node name="head" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="head"]
position = Vector2( 0, -27 )
shape = SubResource( 21 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="GravCol" type="CollisionShape2D" parent="."]
shape = SubResource( 53 )

[node name="MindTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="RayCastWest" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -32, 0 )
collision_mask = 6

[node name="RayCastEast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 6

[connection signal="Die" from="." to="." method="_on_spider_Die"]
[connection signal="body_entered" from="body" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="head" to="." method="_on_head_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
